Fix loading text vertical alignment.

--- a/styles/mobile/common.less
+++ b/styles/mobile/common.less
@@ -1313,7 +1313,7 @@
     font-size: 1rem;
     color: white;
     text-align: center;
-    margin-top: 10px;
+    vertical-align: middle;
 }
 
 .km-loader .km-loading,
